Fixed padding issue where the scroll bar added too much padding to the top

--- a/styles.css
+++ b/styles.css
@@ -87,7 +87,7 @@ h1 {
 .scroll {
   height: 30.5rem;
   overflow-y: auto;
-  padding: 1.1rem;
+  padding: 0 1.1rem;
   width: 23rem;
 }
 
